src/styles/style.css
/* ... */
#toggl-button-edit-form .tb-billable.tb-checked .toggl-button-billable-flag {
  background-color: #4bc800;
}

#toggl-button-edit-form
  .tb-billable.tb-checked
  .toggl-button-billable-flag
  span {
  left: 20px;
}

#toggl-button-edit-form .tb-billable:focus .toggl-button-billable-flag {
  border: 1px solid rgb(83, 183, 253);
  box-shadow: 0px 0px 5px rgb(26, 153, 243);
}

#toggl-button-edit-form .tb-billable:focus .toggl-button-billable-flag span {
  top: 2px;
}

/********* PIVOTAL *********/
.toggl-button.pivotal {
  margin-top: 10px;
}

/********* BITBUCKET *********/
.toggl-button.bitbucket {
  border-color: #ccc;
}

#pull-request-header .toggl-button.bitbucket {
  float: right;
  margin-left: 10px;
  margin-top: 5px;
}

#issue-header .toggl-button.bitbucket {
  margin-left: 15px;
}

/********* GITHUB *********/
.toggl-button.github {
  padding-left: 25px;
  color: #767676;
  font-size: 12px;
}
.toggl-button.github:hover {
  color: #4078c0;
  text-decoration: none;
}

/********* YOUTRACK *********/

.yt-agile-card__header .toggl-button.youtrack {
  position: absolute;
  top: 4px;
  right: 3px;
  float: none;
}
.toggl-button.youtrack,
.toggl-button.youtrack-new {
  float: right;
}
.toggl-button.youtrack-new {
  margin-right: 30px;
}

/********* ASANA *********/
.toggl-button.asana,
.toggl-button.asana-new {
  margin-left: 68px;
  margin-bottom: 5px;
  color: #596573;
  line-height: 22px;
  font-size: 12px;
  font-weight: 600;
}
.toggl-button.asana-new {
  margin-left: 38px;
}
.toggl-button.asana-board {
  margin-top: 3px;
  opacity: 0;
}
.BoardCard--hover .toggl-button.asana-board,
.SingleTaskPaneToolbar .toggl-button.asana-board, /* new ui v1 */
.SingleTaskPaneToolbarEasyCompletion .toggl-button.asana-board {
  /* new ui v2 */
  opacity: 1;
}
SingleTaskPaneToolbar .toggl-button.asana-board, /* new ui v1 */
.SingleTaskPaneToolbarEasyCompletion .toggl-button.asana-board {
  /* new ui v2 */
  margin-left: 8px;
}
.BoardCardWithCustomProperties--hover .toggl-button {
  opacity: 1;
}
.BoardCardWithCustomProperties-assigneeAndDueDate .toggl-button {
  margin-left: 10px;
}

/********* PODIO *********/
.toggl-button.podio {
  width: 65px;
  margin-left: 4px;
}

/********* GITLAB *********/
.toggl-button.gitlab {
  margin-top: 7px;
}

@media (max-width: 991px) {
  .toggl-button.gitlab {
    margin-right: 8px;
  }
}

/********* JIRA *********/
.toggl-button.jira {
  margin-top: 0.2em;
}

.toggl-button.jira2017 {
  margin-top: 0.2em;
  margin-left: 10px;
  cursor: pointer !important;
  color: #42526e !important;
  box-shadow: none;
}

.toggl-button.jira2018 {
  margin-left: 8px;
  margin-top: 0;
  position: relative; /* margin interferes with Jira layout, using relative pos instead */
  top: 2px;
  cursor: pointer;
}

.toggl-button.jira2018-modal {
  margin-top: .5em;
  margin-left: 0;
  cursor: pointer;
}

/********* UNFUDDLE *********/
.toggl-button.unfuddle {
  margin-left: 4px;
  line-height: 18px;
  padding-left: 18px;
  background-size: 16px;
}

/********* TRELLO *********/
.toggl-button.trello {
  text-decoration: none;
  cursor: pointer;
  color: #737373;
}

.toggl-button.trello-list:not(.toggl-button-edit-form-button) {
  visibility: hidden;
  pointer-events: none;
}
.checklist-item-details:hover .toggl-button.trello-list, .toggl-button.trello-list.active:not(.toggl-button-edit-form-button) {
  visibility: visible;
  pointer-events: all;
  position: absolute;
  top: 0;
  right: 32px;
  background-position: center !important;
}
.trello-tb-wrapper .toggl-button {
  color: #444;
}

/********* BASECAMP *********/
.toggl-button.basecamp {
  font-size: 12px;
  height: 14px;
  margin-left: 3px;
  line-height: 14px;
  padding-left: 19px;
  background-size: 17px;
  visibility: hidden;
}

/********* BASECAMP CLASSIC *********/
.toggl-button.basecamphq {
  font-size: 12px;
  height: 15px;
  margin-left: 3px;
  line-height: 14px;
  padding-left: 19px;
  background-size: 17px;
  visibility: hidden;
}

.toggl-button.basecamphq:hover {
  color: #000000 !important;
}

.active_selection .toggl-button.basecamphq,
.toggl-button.basecamphq[data-behavior='selectable_target'] {
  visibility: visible !important;
}

/********* BASECAMP 3 *********/
.todo .toggl-button.basecamp3 {
  transition: opacity 150ms ease;
  display: inline;
  position: absolute;
  opacity: 0;
  margin-top: 2px;
  margin-left: 6px;
  white-space: nowrap;
}

.todo__unassigned-unscheduled + .toggl-button.basecamp3 {
  margin-left: 90px;
}

.todo:not(.selected):hover .toggl-button.basecamp3 {
  opacity: 1;
}

.card-grid .toggl-button.basecamp3 {
  opacity: 0 !important;
}

/********* TEAMWEEK *********/
.toggl-button.teamweek-new {
  color: rgba(47, 47, 47, 0.8);
  margin: 8px 0px 5px 4px;
}

#toggl-button-edit-form .toggl-button.teamweek-new {
  position: static;
}

/********* Produck *********/
.toggl-button.produck {
  padding-left: 25px;
  color: #a9b0c4;
  font-size: 13px;
}
.toggl-button.produck:hover {
  color: #2693ff;
  text-decoration: none;
}

/********* PRODUCTEEV *********/
.toggl-button.producteev {
  margin-left: 12px;
  margin-bottom: 2px;
}

/********* REDBOOTH *********/
.toggl-button.redbooth {
  font-size: 12px;
  line-height: 16px;
  padding-left: 18px;
  background-size: 16px;
}

/********* WORKSECTION *********/
#tmenu2 .toggl-button.worksection {
  margin-top: 9px;
  padding-top: 0px;
  line-height: 21px;
  padding-left: 21px;
}

/********* REVIEWBOARD *********/
.toggl-button.reviewboard {
  margin-top: 4px;
  margin-left: 6px;
}

/********* SIFTER *********/
.toggl-button.sifterapp {
  float: right;
}

.issue-detail-subject .toggl-button.sifterapp {
  margin-top: 7px;
}

/********* GOOGLE DOCS *********/
.toggl-button.google-docs {
  background-size: 17px;
  padding-left: 19px;
}

.toggl-button.google-docs.min {
  margin-bottom: -10px;
  margin-left: 5px;
}

/********* REDMINE *********/
.toggl-button.redmine {
  float: right;
  font-size: 0.8em;
  font-weight: normal;
  margin-top: 4px;
}
/* ... */

